update some outdated things